--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "draft-js": "^0.11.6",
     "firebase": "^7.14.6",
     "moment": "^2.26.0",
     "react": "^16.13.1",
